# pg-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  get_schema.py  pyproject.toml
client/: claude_cli.py
example-clients/: claude_cli.py  gemini-agent-cli.py  ollama_cli.py
server/: app.py  config.py  logging_config.py
server/prompts/: data_visualization.py  natural_language.py  nl_to_sql.py
server/prompts/templates/: generate_sql.md.jinja2  generate_vega.md.jinja2  justify_sql.md.jinja2  validate_nl.md.jinja2
server/resources/: data.py  extensions.py  schema.py
server/resources/sql/: get_database.sql  get_schema.sql  get_schema_table.sql  get_schema_view.sql  list_schemas.sql
server/tools/: connection.py  query.py  viz.py
