[project]
name = "pg-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.49.0",
    "asyncpg>=0.30.0",
    "jinja2>=3.1.6",
    "mcp[cli]>=1.5.0",
    "pydantic-ai>=0.0.46",
    "sqlglot>=26.16.2",
    "tabulate>=0.9.0",
]
